parser/parser.output
Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclarationS

    2 ClassDeclarationS: %empty
    3                  | ClassDeclarationS ClassDeclaration

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    5 ClassDeclaration: CLASS IDENTIFIER Extension LCURLYBRACE VarDeclarationS MethodDeclarationS RCURLYBRACE

    6 Extension: %empty
    7          | EXTENDS IDENTIFIER

    8 VarDeclarationS: %empty
    9                | VarDeclarationS VarDeclaration

   10 VarDeclaration: Type IDENTIFIER SEMICOLON

   11 MethodDeclarationS: %empty
   12                   | MethodDeclarationS MethodDeclaration

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN Params RPAREN LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

   14 Params: %empty
   15       | Type IDENTIFIER AdditionalParamS

   16 AdditionalParamS: %empty
   17                 | AdditionalParamS AdditionalParam

   18 AdditionalParam: COMMA Type IDENTIFIER

   19 Type: INT LSQUAREBRACKET RSQUAREBRACKET
   20     | BOOLEAN
   21     | INT
   22     | IDENTIFIER

   23 StatementS: %empty
   24           | Statement StatementS

   25 Statement: LCURLYBRACE StatementS RCURLYBRACE
   26          | IF LPAREN Expression RPAREN Statement ELSE Statement
   27          | WHILE LPAREN Expression RPAREN Statement
   28          | PRINTLN LPAREN Expression RPAREN SEMICOLON
   29          | IDENTIFIER EQUALS Expression SEMICOLON
   30          | IDENTIFIER LSQUAREBRACKET Expression RSQUAREBRACKET EQUALS Expression SEMICOLON

   31 Expression: Expression AND Expression
   32           | Expression LESS Expression
   33           | Expression PLUS Expression
   34           | Expression MINUS Expression
   35           | Expression MULTIPLY Expression
   36           | Expression LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression DOTLENGTH
   38           | Expression DOT IDENTIFIER LPAREN ExpressionParamS RPAREN
   39           | INTLITERAL
   40           | _TRUE
   41           | _FALSE
   42           | IDENTIFIER
   43           | THIS
   44           | NEW INT LSQUAREBRACKET Expression RSQUAREBRACKET
   45           | NEW IDENTIFIER LPAREN RPAREN
   46           | NOT Expression
   47           | LPAREN Expression RPAREN

   48 ExpressionParamS: %empty
   49                 | Expression AdditionalExpressionParamS

   50 AdditionalExpressionParamS: %empty
   51                           | AdditionalExpressionParamS AdditionalExpressionParam

   52 AdditionalExpressionParam: COMMA Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 4 5 7 10 13 15 18 22 29 30 38 42 45
IF (259) 26
ELSE (260) 26
WHILE (261) 27
INTLITERAL (262) 39
_TRUE (263) 40
_FALSE (264) 41
PUBLIC (265) 4 13
STATIC (266) 4
EXTENDS (267) 7
VOID (268) 4
MAIN (269) 4
RETURN (270) 13
NEW (271) 44 45
THIS (272) 43
PRINTLN (273) 28
DOTLENGTH (274) 37
STRING (275) 4
INT (276) 19 21 44
BOOLEAN (277) 20
CLASS (278) 4 5
LCURLYBRACE (279) 4 5 13 25
RCURLYBRACE (280) 4 5 13 25
LPAREN (281) 4 13 26 27 28 38 45 47
RPAREN (282) 4 13 26 27 28 38 45 47
LSQUAREBRACKET (283) 4 19 30 36 44
RSQUAREBRACKET (284) 4 19 30 36 44
SEMICOLON (285) 10 13 28 29 30
COMMA (286) 18 52
DOT (287) 38
EQUALS (288) 29 30
NOT (289) 46
LESS (290) 32
AND (291) 31
PLUS (292) 33
MINUS (293) 34
MULTIPLY (294) 35


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Goal (41)
    on left: 1, on right: 0
ClassDeclarationS (42)
    on left: 2 3, on right: 1 3
MainClass (43)
    on left: 4, on right: 1
ClassDeclaration (44)
    on left: 5, on right: 3
Extension (45)
    on left: 6 7, on right: 5
VarDeclarationS (46)
    on left: 8 9, on right: 5 9 13
VarDeclaration (47)
    on left: 10, on right: 9
MethodDeclarationS (48)
    on left: 11 12, on right: 5 12
MethodDeclaration (49)
    on left: 13, on right: 12
Params (50)
    on left: 14 15, on right: 13
AdditionalParamS (51)
    on left: 16 17, on right: 15 17
AdditionalParam (52)
    on left: 18, on right: 17
Type (53)
    on left: 19 20 21 22, on right: 10 13 15 18
StatementS (54)
    on left: 23 24, on right: 4 13 24 25
Statement (55)
    on left: 25 26 27 28 29 30, on right: 24 26 27
Expression (56)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47, on right:
    13 26 27 28 29 30 31 32 33 34 35 36 37 38 44 46 47 49 52
ExpressionParamS (57)
    on left: 48 49, on right: 38
AdditionalExpressionParamS (58)
    on left: 50 51, on right: 49 51
AdditionalExpressionParam (59)
    on left: 52, on right: 51


State 0

    0 $accept: . Goal $end

    CLASS  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    4 MainClass: CLASS . IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 5


State 3

    1 Goal: MainClass . ClassDeclarationS

    $default  reduce using rule 2 (ClassDeclarationS)

    ClassDeclarationS  go to state 6


State 4

    4 MainClass: CLASS IDENTIFIER . LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    LCURLYBRACE  shift, and go to state 7


State 5

    0 $accept: Goal $end .

    $default  accept


State 6

    1 Goal: MainClass ClassDeclarationS .
    3 ClassDeclarationS: ClassDeclarationS . ClassDeclaration

    CLASS  shift, and go to state 8

    $default  reduce using rule 1 (Goal)

    ClassDeclaration  go to state 9


State 7

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    PUBLIC  shift, and go to state 10


State 8

    5 ClassDeclaration: CLASS . IDENTIFIER Extension LCURLYBRACE VarDeclarationS MethodDeclarationS RCURLYBRACE

    IDENTIFIER  shift, and go to state 11


State 9

    3 ClassDeclarationS: ClassDeclarationS ClassDeclaration .

    $default  reduce using rule 3 (ClassDeclarationS)


State 10

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    STATIC  shift, and go to state 12


State 11

    5 ClassDeclaration: CLASS IDENTIFIER . Extension LCURLYBRACE VarDeclarationS MethodDeclarationS RCURLYBRACE

    EXTENDS  shift, and go to state 13

    $default  reduce using rule 6 (Extension)

    Extension  go to state 14


State 12

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    VOID  shift, and go to state 15


State 13

    7 Extension: EXTENDS . IDENTIFIER

    IDENTIFIER  shift, and go to state 16


State 14

    5 ClassDeclaration: CLASS IDENTIFIER Extension . LCURLYBRACE VarDeclarationS MethodDeclarationS RCURLYBRACE

    LCURLYBRACE  shift, and go to state 17


State 15

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    MAIN  shift, and go to state 18


State 16

    7 Extension: EXTENDS IDENTIFIER .

    $default  reduce using rule 7 (Extension)


State 17

    5 ClassDeclaration: CLASS IDENTIFIER Extension LCURLYBRACE . VarDeclarationS MethodDeclarationS RCURLYBRACE

    $default  reduce using rule 8 (VarDeclarationS)

    VarDeclarationS  go to state 19


State 18

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    LPAREN  shift, and go to state 20


State 19

    5 ClassDeclaration: CLASS IDENTIFIER Extension LCURLYBRACE VarDeclarationS . MethodDeclarationS RCURLYBRACE
    9 VarDeclarationS: VarDeclarationS . VarDeclaration

    IDENTIFIER  shift, and go to state 21
    INT         shift, and go to state 22
    BOOLEAN     shift, and go to state 23

    $default  reduce using rule 11 (MethodDeclarationS)

    VarDeclaration      go to state 24
    MethodDeclarationS  go to state 25
    Type                go to state 26


State 20

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    STRING  shift, and go to state 27


State 21

   22 Type: IDENTIFIER .

    $default  reduce using rule 22 (Type)


State 22

   19 Type: INT . LSQUAREBRACKET RSQUAREBRACKET
   21     | INT .

    LSQUAREBRACKET  shift, and go to state 28

    $default  reduce using rule 21 (Type)


State 23

   20 Type: BOOLEAN .

    $default  reduce using rule 20 (Type)


State 24

    9 VarDeclarationS: VarDeclarationS VarDeclaration .

    $default  reduce using rule 9 (VarDeclarationS)


State 25

    5 ClassDeclaration: CLASS IDENTIFIER Extension LCURLYBRACE VarDeclarationS MethodDeclarationS . RCURLYBRACE
   12 MethodDeclarationS: MethodDeclarationS . MethodDeclaration

    PUBLIC       shift, and go to state 29
    RCURLYBRACE  shift, and go to state 30

    MethodDeclaration  go to state 31


State 26

   10 VarDeclaration: Type . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 32


State 27

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    LSQUAREBRACKET  shift, and go to state 33


State 28

   19 Type: INT LSQUAREBRACKET . RSQUAREBRACKET

    RSQUAREBRACKET  shift, and go to state 34


State 29

   13 MethodDeclaration: PUBLIC . Type IDENTIFIER LPAREN Params RPAREN LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    IDENTIFIER  shift, and go to state 21
    INT         shift, and go to state 22
    BOOLEAN     shift, and go to state 23

    Type  go to state 35


State 30

    5 ClassDeclaration: CLASS IDENTIFIER Extension LCURLYBRACE VarDeclarationS MethodDeclarationS RCURLYBRACE .

    $default  reduce using rule 5 (ClassDeclaration)


State 31

   12 MethodDeclarationS: MethodDeclarationS MethodDeclaration .

    $default  reduce using rule 12 (MethodDeclarationS)


State 32

   10 VarDeclaration: Type IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 36


State 33

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET . RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    RSQUAREBRACKET  shift, and go to state 37


State 34

   19 Type: INT LSQUAREBRACKET RSQUAREBRACKET .

    $default  reduce using rule 19 (Type)


State 35

   13 MethodDeclaration: PUBLIC Type . IDENTIFIER LPAREN Params RPAREN LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    IDENTIFIER  shift, and go to state 38


State 36

   10 VarDeclaration: Type IDENTIFIER SEMICOLON .

    $default  reduce using rule 10 (VarDeclaration)


State 37

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET . IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    IDENTIFIER  shift, and go to state 39


State 38

   13 MethodDeclaration: PUBLIC Type IDENTIFIER . LPAREN Params RPAREN LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    LPAREN  shift, and go to state 40


State 39

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER . RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    RPAREN  shift, and go to state 41


State 40

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN . Params RPAREN LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    IDENTIFIER  shift, and go to state 21
    INT         shift, and go to state 22
    BOOLEAN     shift, and go to state 23

    $default  reduce using rule 14 (Params)

    Params  go to state 42
    Type    go to state 43


State 41

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN . LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE

    LCURLYBRACE  shift, and go to state 44


State 42

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN Params . RPAREN LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    RPAREN  shift, and go to state 45


State 43

   15 Params: Type . IDENTIFIER AdditionalParamS

    IDENTIFIER  shift, and go to state 46


State 44

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE . StatementS RCURLYBRACE RCURLYBRACE

    IDENTIFIER   shift, and go to state 47
    IF           shift, and go to state 48
    WHILE        shift, and go to state 49
    PRINTLN      shift, and go to state 50
    LCURLYBRACE  shift, and go to state 51

    $default  reduce using rule 23 (StatementS)

    StatementS  go to state 52
    Statement   go to state 53


State 45

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN Params RPAREN . LCURLYBRACE VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    LCURLYBRACE  shift, and go to state 54


State 46

   15 Params: Type IDENTIFIER . AdditionalParamS

    $default  reduce using rule 16 (AdditionalParamS)

    AdditionalParamS  go to state 55


State 47

   29 Statement: IDENTIFIER . EQUALS Expression SEMICOLON
   30          | IDENTIFIER . LSQUAREBRACKET Expression RSQUAREBRACKET EQUALS Expression SEMICOLON

    LSQUAREBRACKET  shift, and go to state 56
    EQUALS          shift, and go to state 57


State 48

   26 Statement: IF . LPAREN Expression RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 58


State 49

   27 Statement: WHILE . LPAREN Expression RPAREN Statement

    LPAREN  shift, and go to state 59


State 50

   28 Statement: PRINTLN . LPAREN Expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 60


State 51

   25 Statement: LCURLYBRACE . StatementS RCURLYBRACE

    IDENTIFIER   shift, and go to state 47
    IF           shift, and go to state 48
    WHILE        shift, and go to state 49
    PRINTLN      shift, and go to state 50
    LCURLYBRACE  shift, and go to state 51

    $default  reduce using rule 23 (StatementS)

    StatementS  go to state 61
    Statement   go to state 53


State 52

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS . RCURLYBRACE RCURLYBRACE

    RCURLYBRACE  shift, and go to state 62


State 53

   24 StatementS: Statement . StatementS

    IDENTIFIER   shift, and go to state 47
    IF           shift, and go to state 48
    WHILE        shift, and go to state 49
    PRINTLN      shift, and go to state 50
    LCURLYBRACE  shift, and go to state 51

    $default  reduce using rule 23 (StatementS)

    StatementS  go to state 63
    Statement   go to state 53


State 54

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN Params RPAREN LCURLYBRACE . VarDeclarationS StatementS RETURN Expression SEMICOLON RCURLYBRACE

    $default  reduce using rule 8 (VarDeclarationS)

    VarDeclarationS  go to state 64


State 55

   15 Params: Type IDENTIFIER AdditionalParamS .
   17 AdditionalParamS: AdditionalParamS . AdditionalParam

    COMMA  shift, and go to state 65

    $default  reduce using rule 15 (Params)

    AdditionalParam  go to state 66


State 56

   30 Statement: IDENTIFIER LSQUAREBRACKET . Expression RSQUAREBRACKET EQUALS Expression SEMICOLON

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 75


State 57

   29 Statement: IDENTIFIER EQUALS . Expression SEMICOLON

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 76


State 58

   26 Statement: IF LPAREN . Expression RPAREN Statement ELSE Statement

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 77


State 59

   27 Statement: WHILE LPAREN . Expression RPAREN Statement

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 78


State 60

   28 Statement: PRINTLN LPAREN . Expression RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 79


State 61

   25 Statement: LCURLYBRACE StatementS . RCURLYBRACE

    RCURLYBRACE  shift, and go to state 80


State 62

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE . RCURLYBRACE

    RCURLYBRACE  shift, and go to state 81


State 63

   24 StatementS: Statement StatementS .

    $default  reduce using rule 24 (StatementS)


State 64

    9 VarDeclarationS: VarDeclarationS . VarDeclaration
   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN Params RPAREN LCURLYBRACE VarDeclarationS . StatementS RETURN Expression SEMICOLON RCURLYBRACE

    IDENTIFIER   shift, and go to state 82
    IF           shift, and go to state 48
    WHILE        shift, and go to state 49
    PRINTLN      shift, and go to state 50
    INT          shift, and go to state 22
    BOOLEAN      shift, and go to state 23
    LCURLYBRACE  shift, and go to state 51

    $default  reduce using rule 23 (StatementS)

    VarDeclaration  go to state 24
    Type            go to state 26
    StatementS      go to state 83
    Statement       go to state 53


State 65

   18 AdditionalParam: COMMA . Type IDENTIFIER

    IDENTIFIER  shift, and go to state 21
    INT         shift, and go to state 22
    BOOLEAN     shift, and go to state 23

    Type  go to state 84


State 66

   17 AdditionalParamS: AdditionalParamS AdditionalParam .

    $default  reduce using rule 17 (AdditionalParamS)


State 67

   42 Expression: IDENTIFIER .

    $default  reduce using rule 42 (Expression)


State 68

   39 Expression: INTLITERAL .

    $default  reduce using rule 39 (Expression)


State 69

   40 Expression: _TRUE .

    $default  reduce using rule 40 (Expression)


State 70

   41 Expression: _FALSE .

    $default  reduce using rule 41 (Expression)


State 71

   44 Expression: NEW . INT LSQUAREBRACKET Expression RSQUAREBRACKET
   45           | NEW . IDENTIFIER LPAREN RPAREN

    IDENTIFIER  shift, and go to state 85
    INT         shift, and go to state 86


State 72

   43 Expression: THIS .

    $default  reduce using rule 43 (Expression)


State 73

   47 Expression: LPAREN . Expression RPAREN

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 87


State 74

   46 Expression: NOT . Expression

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 88


State 75

   30 Statement: IDENTIFIER LSQUAREBRACKET Expression . RSQUAREBRACKET EQUALS Expression SEMICOLON
   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN

    DOTLENGTH       shift, and go to state 89
    LSQUAREBRACKET  shift, and go to state 90
    RSQUAREBRACKET  shift, and go to state 91
    DOT             shift, and go to state 92
    LESS            shift, and go to state 93
    AND             shift, and go to state 94
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97


State 76

   29 Statement: IDENTIFIER EQUALS Expression . SEMICOLON
   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN

    DOTLENGTH       shift, and go to state 89
    LSQUAREBRACKET  shift, and go to state 90
    SEMICOLON       shift, and go to state 98
    DOT             shift, and go to state 92
    LESS            shift, and go to state 93
    AND             shift, and go to state 94
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97


State 77

   26 Statement: IF LPAREN Expression . RPAREN Statement ELSE Statement
   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN

    DOTLENGTH       shift, and go to state 89
    RPAREN          shift, and go to state 99
    LSQUAREBRACKET  shift, and go to state 90
    DOT             shift, and go to state 92
    LESS            shift, and go to state 93
    AND             shift, and go to state 94
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97


State 78

   27 Statement: WHILE LPAREN Expression . RPAREN Statement
   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN

    DOTLENGTH       shift, and go to state 89
    RPAREN          shift, and go to state 100
    LSQUAREBRACKET  shift, and go to state 90
    DOT             shift, and go to state 92
    LESS            shift, and go to state 93
    AND             shift, and go to state 94
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97


State 79

   28 Statement: PRINTLN LPAREN Expression . RPAREN SEMICOLON
   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN

    DOTLENGTH       shift, and go to state 89
    RPAREN          shift, and go to state 101
    LSQUAREBRACKET  shift, and go to state 90
    DOT             shift, and go to state 92
    LESS            shift, and go to state 93
    AND             shift, and go to state 94
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97


State 80

   25 Statement: LCURLYBRACE StatementS RCURLYBRACE .

    $default  reduce using rule 25 (Statement)


State 81

    4 MainClass: CLASS IDENTIFIER LCURLYBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LSQUAREBRACKET RSQUAREBRACKET IDENTIFIER RPAREN LCURLYBRACE StatementS RCURLYBRACE RCURLYBRACE .

    $default  reduce using rule 4 (MainClass)


State 82

   22 Type: IDENTIFIER .
   29 Statement: IDENTIFIER . EQUALS Expression SEMICOLON
   30          | IDENTIFIER . LSQUAREBRACKET Expression RSQUAREBRACKET EQUALS Expression SEMICOLON

    LSQUAREBRACKET  shift, and go to state 56
    EQUALS          shift, and go to state 57

    $default  reduce using rule 22 (Type)


State 83

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN Params RPAREN LCURLYBRACE VarDeclarationS StatementS . RETURN Expression SEMICOLON RCURLYBRACE

    RETURN  shift, and go to state 102


State 84

   18 AdditionalParam: COMMA Type . IDENTIFIER

    IDENTIFIER  shift, and go to state 103


State 85

   45 Expression: NEW IDENTIFIER . LPAREN RPAREN

    LPAREN  shift, and go to state 104


State 86

   44 Expression: NEW INT . LSQUAREBRACKET Expression RSQUAREBRACKET

    LSQUAREBRACKET  shift, and go to state 105


State 87

   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN
   47           | LPAREN Expression . RPAREN

    DOTLENGTH       shift, and go to state 89
    RPAREN          shift, and go to state 106
    LSQUAREBRACKET  shift, and go to state 90
    DOT             shift, and go to state 92
    LESS            shift, and go to state 93
    AND             shift, and go to state 94
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97


State 88

   31 Expression: Expression . AND Expression
   32           | Expression . LESS Expression
   33           | Expression . PLUS Expression
   34           | Expression . MINUS Expression
   35           | Expression . MULTIPLY Expression
   36           | Expression . LSQUAREBRACKET Expression RSQUAREBRACKET
   37           | Expression . DOTLENGTH
   38           | Expression . DOT IDENTIFIER LPAREN ExpressionParamS RPAREN
   46           | NOT Expression .

    DOTLENGTH       shift, and go to state 89
    LSQUAREBRACKET  shift, and go to state 90
    DOT             shift, and go to state 92
    PLUS            shift, and go to state 95
    MINUS           shift, and go to state 96
    MULTIPLY        shift, and go to state 97

    $default  reduce using rule 46 (Expression)


State 89

   37 Expression: Expression DOTLENGTH .

    $default  reduce using rule 37 (Expression)


State 90

   36 Expression: Expression LSQUAREBRACKET . Expression RSQUAREBRACKET

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 107


State 91

   30 Statement: IDENTIFIER LSQUAREBRACKET Expression RSQUAREBRACKET . EQUALS Expression SEMICOLON

    EQUALS  shift, and go to state 108


State 92

   38 Expression: Expression DOT . IDENTIFIER LPAREN ExpressionParamS RPAREN

    IDENTIFIER  shift, and go to state 109


State 93

   32 Expression: Expression LESS . Expression

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 110


State 94

   31 Expression: Expression AND . Expression

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 111


State 95

   33 Expression: Expression PLUS . Expression

    IDENTIFIER  shift, and go to state 67
    INTLITERAL  shift, and go to state 68
    _TRUE       shift, and go to state 69
    _FALSE      shift, and go to state 70
    NEW         shift, and go to state 71
    THIS        shift, and go to state 72
    LPAREN      shift, and go to state 73
    NOT         shift, and go to state 74

    Expression  go to state 112


State 96

   34 Expression: Expression MINUS . Expression
